# hypr-util

./: .gitignore  README.md  app.py  pyproject.toml  setup.sh  test_flash.py  tray.py  uninstall.sh
firefly-ctl/: Cargo.toml
firefly-ctl/src/: main.rs
hyprutil/: __init__.py  automation.py  cli.py  display.py  fan.py  focus.py  power.py  tasks.py  util.py
hyprutil/rgb/: __init__.py  controller.py  notify.py  presets.py  watch.py
hyprutil/ui/: app.py  tray.py
system/: 49-hypr-util-focus.rules  99-firefly-keyboard.rules  fancurve.service  fancurve.sh  hypr-util-daemon.service  hypr-util-focus-fw.sh  hypr-util-focus-hosts.sh  hypr-util-sleep.sh  hypr-util.desktop  org.hyprnon.hyprutil.desktop  org.hyprnon.hyprutil.service
